[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/themes/general_theme/general_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/images/ui/book/mastery_border.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/book/mastery_bar.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/book/mastery_bg.png" type="Texture" id=4]
[ext_resource path="res://game/ui/endgame-stats/EndGameXPProgressControl.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/font-data/font-read.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://game/ui/endgame-stats/XPControlSlider.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 34
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.537255, 1, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 37
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="EndGameXPProgressControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1520.0
margin_bottom = -940.0
rect_min_size = Vector2( 600, 175 )
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_right = 257.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Unlock New Recipes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberContainer" type="HBoxContainer" parent="."]
margin_left = 295.59
margin_top = -2.11896
margin_right = 595.59
margin_bottom = 54.881
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="Label" parent="NumberContainer"]
margin_left = 107.0
margin_top = 3.0
margin_right = 174.0
margin_bottom = 54.0
text = "200"

[node name="Max" type="Label" parent="NumberContainer"]
margin_left = 178.0
margin_right = 300.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "/2000"
align = 2

[node name="PreviewProgress" type="ProgressBar" parent="."]
visible = false
margin_top = 55.0
margin_right = 570.0
margin_bottom = 85.0
rect_min_size = Vector2( 570, 30 )
mouse_filter = 2
size_flags_vertical = 4
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 75.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatProgress" type="ProgressBar" parent="."]
margin_top = 55.0
margin_right = 570.0
margin_bottom = 85.0
rect_min_size = Vector2( 570, 30 )
mouse_filter = 2
size_flags_vertical = 4
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="TextureRect" parent="StatProgress"]
margin_left = -4.0
margin_top = -2.0
margin_right = 296.0
margin_bottom = 28.0
rect_min_size = Vector2( 600, 40 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_top = 105.0
margin_right = 570.0
margin_bottom = 134.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentAllocatedXP" type="Label" parent="."]
margin_top = 130.0
margin_right = 570.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
